// Vitest Snapshot v1

exports[`plugins/wasm > should add configs for wasm 1`] = `
{
  "experiments": {
    "asyncWebAssembly": true,
  },
  "output": {
    "webassemblyModuleFilename": "static/wasm/[hash].module.wasm",
  },
}
`;

exports[`plugins/wasm > should allow to modify dist path of wasm files 1`] = `
{
  "experiments": {
    "asyncWebAssembly": true,
  },
  "output": {
    "webassemblyModuleFilename": "foo/[hash].module.wasm",
  },
}
`;
